[package]
name = "my_kakao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-http = "3"
actix-web = "4" 
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
mongodb = "2"
kakao-rs = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3