[package]
name = "my_kakao"
version = "0.1.0"
edition = "2021"
authors = ["Choi Seok Won <ikr@kakao.com>"]
description = "카카오 챗봇 Rust + MongoDB"
license = "MIT"
readme = "README.md"

[build-dependencies]
dotenv = "0.15"  # .env 파일 환경 변수

[dependencies]
actix-rt = "2"   # 웹서버 열기
actix-http = "3"   # 웹서버 열기
actix-web = "4"   # 웹서버 열기
futures = "0.3"  # 비동기
serde = { version = "1.0", features = ["derive"] }  # JSON
serde_json = "1.0"  # JSON
serde_derive = "1.0"  # JSON
mongodb = "2"  # 몽고DB
kakao-rs = "0.3"  # 카카오 챗봇 JSON 만드는 라이브러리 (직접 제작)

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3